<resources>
    <string name="app_name">android_material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Search in Wiki</string>
    <string name="wiki_helper_text">Check the term in wikipedia</string>
    <string name="search">Search</string>
    <string name="text_choice_1">Before yesterday</string>
    <string name="text_choice_2">Yesterday</string>
    <string name="text_choice_3">Right now</string>
    <string name="search_title">search</string>
    <string name="filter_title">filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
</resources>